--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
         <h1>Você decide o futuro da IA</h1>
         <div class="caixa-perguntas"></div>
         <div class="caixa-aternativas"></div>
-        <div class="caixa-resultado"></div>
-        <p class="texto-resultado"></p>
+        <div class="caixa-resultado">
+            <p class="texto-resultado"></p>
+        </div>
+        <script src="script.js"></script>
     </div>
 </body>
 </html>
